labels not aligned issue fix

--- a/resources/assets/sass/scheduledGames/_scheduleGames.scss
+++ b/resources/assets/sass/scheduledGames/_scheduleGames.scss
@@ -69,6 +69,7 @@
       color: #ffffff;
       opacity: 1;
       margin-bottom: 10px;
+      margin-top: 10px;
     }
     .viewGame__filter-section {
       padding: 20px 0;
